Solved distribution page alignment issue

--- a/src/App.css
+++ b/src/App.css
@@ -505,13 +505,15 @@ body {
   .other-tank-containar {
     width: 100%;
     height: 50%;
-    flex-direction: column;
+    /* flex-direction: column; */
+    display: flex;
+    flex-wrap: wrap;
     align-items: center;
   }
 
   .all-tank {
-    width: 50%;
-    height: 50%;
+    width: 100%;
+    height: 100%;
     padding: 1%;
   }
   .tank-adjiustment-distribution {
